ci: diagnostic snapshot for run 25287170073 [skip ci]